--- a/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
       defaultReplicaCount: 1
       backupTarget: s3://bkp-cluster@us-east-1/
       backupTargetCredentialSecret: s3-secret
-      taintToleration: node-role.kubernetes.io/control-plane=true:NoSchedule
+      taintToleration: node-role.kubernetes.io/control-plane:NoSchedule
     pspEnable: false
     longhornManager:
       tolerations:
