--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -133,7 +133,7 @@ spec:
           memory: 256Mi
           cpu: 20m
       nodeSelector:
-        node-role.kubernetes.io/control-plane: "true"
+        node-role.kubernetes.io/control-plane: "'true'"
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           effect: "NoSchedule"
@@ -166,7 +166,7 @@ spec:
           memory: 1Gi
           cpu: 10m
       nodeSelector:
-        node-role.kubernetes.io/control-plane: "true"
+        node-role.kubernetes.io/control-plane: "'true'"
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           effect: "NoSchedule"
@@ -204,7 +204,7 @@ spec:
         - file
       loggerSweeperDuration: 2 #days
       nodeSelector:
-        node-role.kubernetes.io/control-plane: "true"
+        node-role.kubernetes.io/control-plane: "'true'"
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           effect: "NoSchedule"
@@ -243,7 +243,7 @@ spec:
         age: 6h
         interval: 1h
       nodeSelector:
-        node-role.kubernetes.io/control-plane: "true"
+        node-role.kubernetes.io/control-plane: "'true'"
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           effect: "NoSchedule"
@@ -290,7 +290,7 @@ spec:
         limits:
           memory: 4Gi
       nodeSelector:
-        node-role.kubernetes.io/control-plane: "true"
+        node-role.kubernetes.io/control-plane: "'true'"
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           effect: "NoSchedule"
@@ -313,7 +313,7 @@ spec:
       podAnnotations: {}
       serviceAccountName: ""
       nodeSelector:
-        node-role.kubernetes.io/control-plane: "true"
+        node-role.kubernetes.io/control-plane: "'true'"
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           effect: "NoSchedule"
