--- a/kubernetes/apps/observability/loki/app/secrets.sops.yaml
+++ b/kubernetes/apps/observability/loki/app/secrets.sops.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: loki-bucket
+    name: loki-secret
 stringData:
     BUCKET_NAME: ENC[AES256_GCM,data:j2egLQ==,iv:lqQf0tRPXjJNQn2x4Hp5KDiWYfO9em1uwQcxT2pI/00=,tag:vGEu2Ft2dt5V3fQVpCo9aA==,type:str]
-    BUCKET_HOST: ENC[AES256_GCM,data:beIIWz5wEHOUyqLxFjs7E3a7oaQWSGsCPg==,iv:PX14ZcgND2W7Ci1bzCvAz+4fkoTdKwGf0pKH6m5enec=,tag:KRkmWcBZhjbPenS0aWnEhw==,type:str]
-    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:cLrf4A9dv18CI36HytyUHiY6,iv:NRlCl2UgXwAixLpYuPQ7SA7KmEyf4NWv1aG6jnuzjJM=,tag:f0yfhP051EOxOkoqDjaYng==,type:str]
-    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:78+Y70fRPh/TWCtGmRmhRyG3vCqgjw==,iv:BUPGBu6NmWG3o8D+X6x7UeirpRFOZ2zqeCMAH1rNmos=,tag:t43b40oYtU/q7y9LJRXEhg==,type:str]
+    S3_BUCKET_REGION: ENC[AES256_GCM,data:JE/pSTnpUtrJ,iv:Go/dG8zfEXL8sKK30l0fhPNDZQmgfkwT0ed/US1ihaI=,tag:NYChyVV4PlCzCD0sf8LP1Q==,type:str]
+    S3_BUCKET_HOST: ENC[AES256_GCM,data:nYBaXrEzbYCN8OwZra0YKsLf6T5+4adX,iv:nn9mUN1Tdp8TqzRCNN7VJURWxej7LGPZG79YHmKGLqo=,tag:NWZi0kspBGWqcPJt3qxxMQ==,type:str]
+    S3_ACCESS_KEY: ENC[AES256_GCM,data:y2lEeadTJuYkzGa9zdlE8/sT,iv:wh4YR+nmw/b53n4cjzqA1e6tfjYyCXoiL0ztdJO3prI=,tag:aMrO//ZUvtuSkMu1wlzOyg==,type:str]
+    S3_SECRET_KEY: ENC[AES256_GCM,data:s8umBKlASYwyo4XrD+kplJ9Zw9YCbA==,iv:+zF55WcTwrSckcAB97yIVHP+fZVH6mu1KPP+MT+bHp4=,tag:6Gl1zEAPqJ4IMTik5fU49g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             U1N4Z2g0cjlEd1laMUVZZlRuSHAvRTQK+lZmHrLlqzbYkbtLrO5IGjR7FQOCxAHD
             NXoMzY+8hMMx17nTnVgEgDP1qA0oR+qdwLJmTn+UBJS+3vTMZPg2vA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T22:23:13Z"
-    mac: ENC[AES256_GCM,data:9jvN8BX2C6lBbWHPKv3tQ3jJqT5Tl5ujqxRmFSVokCUEYpVfOujMKsWDcUU1nilmUXA9rX+diPWc9OPINMc223T/nKYWtmgK5yZJ2o+wgGEk0INGrULOblON1pIoYiRy0uMNuCCHx6GVhPdrDy91PFEqIq80WRWkMqTODTJn6nw=,iv:uTi4DqR+zBnjaJhInNYdoGA+4fV7EssDgH7dfHxFHr0=,tag:9aROyNCwQ3pMA9hLrrGmxw==,type:str]
+    lastmodified: "2024-06-27T22:36:01Z"
+    mac: ENC[AES256_GCM,data:a7FWRQeD4ltyjqnBeGsH4Us7vq+NIwc4i0wPVNYzXAqWasq9iF4iWyk/t5LxsNOSD6kFFQRkYADC049YKM4s3YcdPpua58j82UtJafpe0xAWV+FX56T/tN4DA1SaSp0qPu/UpxMHeszqKGResVJM2smNMdAlqPkHwgqWbjG8crA=,iv:mOdzryXPKf/rnWs5dIE64zESdK/glznkl++TYPhsvbM=,tag:a7k/6sOPvjzaJy2Etzbbbw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
