--- a/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
@@ -87,7 +87,7 @@ spec:
               "--exclude-category", "manual",
               "--exclude-category", "overload",
               # "--include-tag", "expired", # defined in config.yaml
-              "--exclude-tag": "activity:24h",
+              "--exclude-tag", "activity:24h",
               "--include-tag", "added:7d",
               "--with-data",
               # "--dry-run",
