--- a/kubernetes/apps/storage/harbor/webhook/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/webhook/helmrelease.yaml
@@ -34,6 +34,7 @@ spec:
           - '^docker.io'
         excludes:
           - '.*goharbor.*'
+          - '.*longhornio.*'
         replace: 'harbor.skynerv.com/local-docker'
         checkUpstream: false
         #authSecretName: harbor-image-pull-secret
@@ -42,6 +43,7 @@ spec:
           - '^hub.docker.com'
         excludes:
           - '.*goharbor.*'
+          - '.*longhornio.*'
         replace: 'harbor.skynerv.com/local-docker'
         checkUpstream: false
         #authSecretName: harbor-image-pull-secret
@@ -50,6 +52,7 @@ spec:
           - '^ghcr.io'
         excludes:
           - '.*goharbor.*'
+          - '.*qbtools.*'
         replace: 'harbor.skynerv.com/local-github'
         checkUpstream: false
         #authSecretName: harbor-image-pull-secret
