--- a/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
+++ b/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: s3-secret
     namespace: storage
 stringData:
-    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:UK4yvSnZ8laMc72/oDu6R2HVWN1RBu2vww==,iv:Q8jtJZsSaUJLdrLsd5ij0lrfptt4lISwG+Hsiq/Or9g=,tag:/7JgIgfcrjUI9r7pgGIz8Q==,type:str]
-    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:sO7OBX6ppITzgpHxH+3xaMS0RL+7uCNK5A2RW21KaQ==,iv:dnbuW20E6coZEt7wNiUSe6tYDvWuBELI7AhpQv47e34=,tag:TCivyJUho3xgxYNgCj7sEw==,type:str]
-    AWS_ENDPOINTS: ENC[AES256_GCM,data:8zQ0/zcco2e4WC7HfgPb6fEUm4nKdq4BnlsGJBxj5CSK,iv:9XkMjPs1pmlkgsfcU6Bu0xg3vkAXFI0/ErqC5wnFmXY=,tag:MnyBtZYnAuguodcWXPZgHA==,type:str]
+    AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:TsuKz18and7O,iv:fMAOxP+ZbtdqIBuS9Xpre2p/7kjoGU5JWOcgFo2H/Hc=,tag:OCOJEvxnDMQQTY2t6mcMoA==,type:str]
+    AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:bfeuR7jSgUXmQQ==,iv:oH1uI/yzWFNH/NOGH2CvOFnkQtCU8gwTqmxsGgkuVtg=,tag:sATWJfEQBKfVrBcv42lhsA==,type:str]
+    AWS_ENDPOINTS: ENC[AES256_GCM,data:1cyE7AIFw+cqt96TvG8m0GpuzBJj7k0yLmWWPEDlKg==,iv:Hkgu3nzTTL/rUnAb8aHUThQWGQxOQCyXbuOhMIp7le0=,tag:cKLibJ1YTrUpAXwPB8n3ng==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             S015SVh1djlQcytVV3d4MUNadkF1SFEK1sx9j4D1CrXD68EgJ7ji/c1y+74Jc2JC
             nIN+wtITLElElC/hgQTSas8KGlbCaZCDmrq7pZXbnAj3UKUPqXjORA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-31T17:18:11Z"
-    mac: ENC[AES256_GCM,data:iKM3ntY04Mvu4NXd/tBN2CpunWAkFemvlUABBnjYIV45WAHziO0d8715ZKRPc8pYUVZz/U01V2dqYcWB9ePPOOJuPqExaiqWZXXn26ktIgqGWQDX4p/SXg0fdR3yQJnl58sUSn5MJSvsk4Zlw2fh8uTgBkGNLd0ZA8+sKgsrfwQ=,iv:0p21ToEcRfnE+PzexGAeYXD5wGRQHkmDX7EhTho7Pw8=,tag:sFgFynFWQ44+NjBUhoocPA==,type:str]
+    lastmodified: "2024-06-28T19:40:44Z"
+    mac: ENC[AES256_GCM,data:GuKyh2+Jp58YGUivL3Ea+/qZLYncrIxp+tfGpVpwRc94XWmPqc+EIMD+e/RD7+VVDfPz44cZWytiiuY9li06MgXTsdfVHeKtAhEgP2dzFNHeBTvk69j4RsRcOc4rMob4KgXgVlOXqi7YGwZme8J99clmicLiPSauKLYG1uXYeng=,iv:uXL5m8YniwqzqGwVm3z7SQoOocqK1GWH/M7+JkpoX/Q=,tag:eCK65T3mh6HAA7lXb5shoQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
