--- a/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
+++ b/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
@@ -6,7 +6,7 @@ metadata:
 stringData:
     AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:TsuKz18and7O,iv:fMAOxP+ZbtdqIBuS9Xpre2p/7kjoGU5JWOcgFo2H/Hc=,tag:OCOJEvxnDMQQTY2t6mcMoA==,type:str]
     AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:bfeuR7jSgUXmQQ==,iv:oH1uI/yzWFNH/NOGH2CvOFnkQtCU8gwTqmxsGgkuVtg=,tag:sATWJfEQBKfVrBcv42lhsA==,type:str]
-    AWS_ENDPOINTS: ENC[AES256_GCM,data:ePEaUEMUKb0=,iv:hJfCWpk7FuyFQzwrbReAmfSfUOyNturpIpl1ZUC93wM=,tag:RbkPUM4hMyuYrFVFWZGhlw==,type:str]
+    AWS_ENDPOINTS: ENC[AES256_GCM,data:1NfbsQaeuXlMLkp1FHY=,iv:FePcKkByRS01B+gC65bcyBf1QBfAPc8Je5mQMrAWlDg=,tag:Tjb/FrgYwxpacePr9ghxIg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             S015SVh1djlQcytVV3d4MUNadkF1SFEK1sx9j4D1CrXD68EgJ7ji/c1y+74Jc2JC
             nIN+wtITLElElC/hgQTSas8KGlbCaZCDmrq7pZXbnAj3UKUPqXjORA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-28T19:50:28Z"
-    mac: ENC[AES256_GCM,data:OKvnjqh1Zgi4HNhkftBf05QyZBHYkRmxZbz2iJ6r6yRIcRv1S/QvxWJtXu72jBfNULirEBHbIYMPF/qDNbagy6rTIBImFaW1+RENs+H3Txl3n/p+bvY6s4Q3Yb9cRyXj8aTsYJ8OdgeJRaJaFAqD/kCK5o+e+J4e78EBkAKzBjY=,iv:zNnYJvaGyhcJl7UAOpEWGzg0kN8SRDAXcGdF+j+zI2Y=,tag:EwPGMXHAApgAV8mnbKfdOw==,type:str]
+    lastmodified: "2024-06-28T19:59:15Z"
+    mac: ENC[AES256_GCM,data:NwB59rNReUEp3y9Y2Xnhqv3265ytT+qFQorNyKADuelBnhEYXRE5qDRLvqHl6SGcVlb4xVZl+/CbTN+z2Ip9PheIPVQod+Y/F3ZQClAbdl4eOpUUr9CTDzlexFGzu3QFkg906KmE6XXnt8e0oPvyj4Hraz3OqifhdVVbwgqUGx4=,iv:KfHTBHYxXx2FqmyZVeHE5/Ha6XbnSJCZNDaWgc8gEBo=,tag:PSZnBlcSR9RPD8eqMyD7Gw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
