--- a/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
+++ b/kubernetes/apps/storage/longhorn/app/s3-secret.sops.yaml
@@ -6,7 +6,7 @@ metadata:
 stringData:
     AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:TsuKz18and7O,iv:fMAOxP+ZbtdqIBuS9Xpre2p/7kjoGU5JWOcgFo2H/Hc=,tag:OCOJEvxnDMQQTY2t6mcMoA==,type:str]
     AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:bfeuR7jSgUXmQQ==,iv:oH1uI/yzWFNH/NOGH2CvOFnkQtCU8gwTqmxsGgkuVtg=,tag:sATWJfEQBKfVrBcv42lhsA==,type:str]
-    AWS_ENDPOINTS: ENC[AES256_GCM,data:1NfbsQaeuXlMLkp1FHY=,iv:FePcKkByRS01B+gC65bcyBf1QBfAPc8Je5mQMrAWlDg=,tag:Tjb/FrgYwxpacePr9ghxIg==,type:str]
+    AWS_ENDPOINTS: ENC[AES256_GCM,data:i996SOzPu1G5NEe3+Cdn1CM=,iv:sMGUWSCoincLRnBUOLx6JB5cdHQnZZ5YCfnWNshNP3Y=,tag:SmOJxQdncJn+Bh8zkW0YrQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             S015SVh1djlQcytVV3d4MUNadkF1SFEK1sx9j4D1CrXD68EgJ7ji/c1y+74Jc2JC
             nIN+wtITLElElC/hgQTSas8KGlbCaZCDmrq7pZXbnAj3UKUPqXjORA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-28T19:59:15Z"
-    mac: ENC[AES256_GCM,data:NwB59rNReUEp3y9Y2Xnhqv3265ytT+qFQorNyKADuelBnhEYXRE5qDRLvqHl6SGcVlb4xVZl+/CbTN+z2Ip9PheIPVQod+Y/F3ZQClAbdl4eOpUUr9CTDzlexFGzu3QFkg906KmE6XXnt8e0oPvyj4Hraz3OqifhdVVbwgqUGx4=,iv:KfHTBHYxXx2FqmyZVeHE5/Ha6XbnSJCZNDaWgc8gEBo=,tag:PSZnBlcSR9RPD8eqMyD7Gw==,type:str]
+    lastmodified: "2024-06-28T20:00:10Z"
+    mac: ENC[AES256_GCM,data:neLZZroFEnacsyJiPFF7PgWZbFH+M0qXkC3JNlnBU8P71FqN5tXUNVbHnRH3qtKu4ocngZrUY1MJfKeJOYME8QjwmcOvapU77eYIvjj3p9mvt3dEJ3uoK520m4hOxpgyp10LRX1RBASOTPMdbgvHetRLPXFOU38kgxVedWFI5mY=,iv:NV/6DM55BG9oGKC+ds6H0rl/qw/lxrb0+y6EDnk4U4A=,tag:70OdbfTlP4EJlp7sdMGs3g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
