--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
   - ./home-assistant/ks.yaml
   # - ./scrypted/ks.yaml
   - ./matter-server/ks.yaml
-  # - ./zigbee2mqtt/ks.yaml
+  - ./zigbee2mqtt/ks.yaml
