--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
   - ./frigate/ks.yaml
   - ./mosquitto/ks.yaml
   - ./home-assistant/ks.yaml
-  # - ./scrypted/ks.yaml
+  - ./scrypted/ks.yaml
   - ./matter-server/ks.yaml
   - ./zigbee2mqtt/ks.yaml
