--- a/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
+++ b/kubernetes/apps/home/zigbee2mqtt/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
 stringData:
     mqtt_user: ENC[AES256_GCM,data:Leoy95n9Cn+PLq4jIRCJPpTJwVXVhCV8ATM=,iv:y7kY4AXqiR+GBn+4X4nuTKn/vnwVhs7DX1Yv8AgCIvw=,tag:vtqlxQad0Xhf9KY/akdGjQ==,type:str]
     mqtt_password: ENC[AES256_GCM,data:0+uYbffkfEDAG3FNJ2vXw1ngNWYmLxCZZ9o=,iv:tuhg8yJRhGZXeTyO9TDszSFNuJ6aBvsHedyvsIHEPM0=,tag:FF3uGp29DSrhSkRHyK830Q==,type:str]
-    zigbee_pan_id: ENC[AES256_GCM,data:yDBYy07HyNo=,iv:XGqREWbCmw/Z9i0gGVSf0I9LgnQOtkGDgCxTFZ4DFbw=,tag:CJ/x3ouN0RnLyWpV/5dmNw==,type:str]
-    zigbee_ext_pan_id: ENC[AES256_GCM,data:FLvygvRrg64=,iv:YTXZC58sccehbwIWVarJMpmTHdF9Q282Qf4vgX05ft4=,tag:K9BEY0YRrA2yLm5FiwielQ==,type:str]
+    zigbee_pan_id: ENC[AES256_GCM,data:g4IY8fw=,iv:cRPPyBEXN0FE/VMG4viLn10lwcENlpvaxqJknHz8Skk=,tag:ESZJ7d/1sCl90XXRJ8unnw==,type:str]
+    zigbee_ext_pan_id: ENC[AES256_GCM,data:mI3sxzuZ3YAMpC2X3XvXrA==,iv:yWFZMFXvp3qKLzSZKYZUg0FZKxeHSMvolpga0A2cSEU=,tag:n8RFv5FD7aRLUiE0XvOkEg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             TTVIZGRpVWVHU1NPS3BpN1dVQ1JIK1EK3qgjz/3t6xXVPDsq1notISsWtnREHJVJ
             4XhoOUMp09DJV89myAOi/F3bNkO+Uid7V3IQooUL03Gk7BF97eFy1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-01T16:58:33Z"
-    mac: ENC[AES256_GCM,data:aZp5EUbfeI/M801lRDWeyUyucmAzqQQ3QboOe9YcGNbF3PABkQP39rlg/AvJlAOpdiDXKwWls94Q8mfOq4NLl9OKccjzdByQm1VHmV6IJp2yWl4+JgiWBHWsxKmv087Uyv/d6ku8SDCMINew+TBhiqHU77Np3mpLZFtXkHWfMuQ=,iv:Pywg48GNoEzy7mgmB1hdxRNlXKA1BEeIC0UnSnJmzO8=,tag:ztzvlfwA9pyUYw6HUnVrwQ==,type:str]
+    lastmodified: "2024-07-01T22:29:23Z"
+    mac: ENC[AES256_GCM,data:IcKsE/flxZjh6JIslzowEb4/hhrCdZSPw20m63ja2Yed1n7Q4aaAd9Y2Lm2DMNzBbrjGw60nfDoyVRWsEDcOebNLvj3rPBbcFtP4Ojkb8N7cUW3X+WtZhjWGQKgaiAGPqumhftgbcp0oNNlU2JXJ8OrrajZdZMM1g05rnIPNmFg=,iv:P7UIG9JSHhMdrjDo6RcZ72EnA/3xQK25m4h0e8gq9Q8=,tag:O5KOzOosMSrCUNplY1/XZA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
