--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -39,6 +39,8 @@ stringData:
     HARBOR_DB_PASSWORD: ENC[AES256_GCM,data:u+PvgvX+UmSRjmEGoYCY40zGivQI2A==,iv:b0cyi88IlBb6SqnZnSCTErrGufCnRsG7j5G7/ggLPK8=,tag:I0g7M4NRZ3QeOCT9Sml4Xg==,type:str]
     HARBOR_DB_USER: ENC[AES256_GCM,data:A8/xWOh9JBA=,iv:PTt8X98giaH5hpjfCYQllMD9fNb5X8EoXEwMfKHVrtY=,tag:3WmX7XSXz17cEub97DVTDg==,type:str]
     HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:aZNk+qWABVNrKA==,iv:UGzLUsbdr+uR8ZrVrbJN26YAtjAGgqd38Q1UJKG/SOY=,tag:wrNMckae4GrQJzgpfInO2w==,type:str]
+    ZIGBEE_PAN_ID: ENC[AES256_GCM,data:k0MHm1w=,iv:r4j8cDkRhipJqKEDIdDXH+lycn5vPnxe3GrdWtMqHOY=,tag:JbFJyfmXlGelmL/wVvXQ0A==,type:str]
+    ZIGBEE_EXT_PAN_ID: ENC[AES256_GCM,data:p/IJetjMOJ22JY4M6jYx3g==,iv:htf4jA00gFJkxGwKw+Jax4RZ7KpP2bgtl903n7NnAIg=,tag:wD63RxVeEW7up9t/Lejdpw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -54,8 +56,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-14T22:45:31Z"
-    mac: ENC[AES256_GCM,data:TjA1umhgTRDruJuiAuxtJOuZH4tSLbO2RX07uE4XsxcrKaKkx418sGTzGiyEGG4Aex28cuSv6dOnBS5GCdKulIu6S+jDfJyI0WyEfm5ow9+2VsS+ENQrO/Alv5y7hmukux0C80MPAfPYOh1RIGeiOquqHhBL5QKZKjiaQ2vOuN0=,iv:6sOTvhaWyT0H53OPKgfDrtbBBufmAOexAYVy8CZCBss=,tag:Jr0e2C6Hn2xNahZkjh9Ljw==,type:str]
+    lastmodified: "2024-07-02T07:44:19Z"
+    mac: ENC[AES256_GCM,data:lc3KUT34GJcVM/SOw0TwW5a+HUNmIAkg1fVi6CtvOZnM+OblUMr+4366eL62O6x3aEiUhSve3UCZWyd8DZ9h4aAAUy10HrzLGakGL7E0loJRzV6imRuEYpTlh3ArXxlzjVf+XtNpvW55JsnAJtYC677NwS9Pctwa5kKBMLLoMl0=,iv:iSgAMaczQ7/XasKtPDqO7iLZ1SVmzaY4MNc208ghIkA=,tag:MqGgifxMk/LgYr9VQJ9VCQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
