--- a/kubernetes/apps/home/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/home/zigbee2mqtt/app/helmrelease.yaml
@@ -45,8 +45,8 @@ spec:
               ZIGBEE2MQTT_CONFIG_ADVANCED_LEGACY_AVAILABILITY_PAYLOAD: "false"
               ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: info
               ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_OUTPUT: '["console"]'
-              ZIGBEE2MQTT_CONFIG_ADVANCED_EXT_PAN_ID: '["${ZIGBEE_EXT_PAN_ID}"]'
-              ZIGBEE2MQTT_CONFIG_ADVANCED_PAN_ID: ${ZIGBEE_PAN_ID}
+              ZIGBEE2MQTT_CONFIG_ADVANCED_EXT_PAN_ID: '["1d15da2060fc2ce8"]'
+              ZIGBEE2MQTT_CONFIG_ADVANCED_PAN_ID: 58372
               ZIGBEE2MQTT_CONFIG_AVAILABILITY_ACTIVE_TIMEOUT: 60
               ZIGBEE2MQTT_CONFIG_AVAILABILITY_PASSIVE_TIMEOUT: 2000
               ZIGBEE2MQTT_CONFIG_DEVICE_OPTIONS_LEGACY: "false"
