--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.2.1
       interval: 30m
       sourceRef:
         kind: HelmRepository
@@ -54,6 +54,7 @@ spec:
                 memory: 9248M
     service:
       main:
+        controller: main
         annotations:
           io.cilium/lb-ipam-ips: 192.168.108.77
         type: LoadBalancer
@@ -61,6 +62,10 @@ spec:
         ports:
           http:
             port: 8096
+          dlna:
+            port: 1900
+          disco:
+            port: 7359
     ingress:
       main:
         enabled: true
@@ -72,7 +77,7 @@ spec:
             paths:
               - path: /
                 service:
-                  name: main
+                  identifier: main
                   port: http
         tls:
           - hosts:
