--- a/kubernetes/apps/database/redis/app/helmrelease.yaml
+++ b/kubernetes/apps/database/redis/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
     fullnameOverride: "redis-sentinel"
     commonConfiguration: |-
       # Enable AOF https://redis.io/topics/persistence#append-only-file
-      appendonly yes
+      appendonly no
       # Disable RDB persistence, AOF persistence already enabled.
       databases 80
       maxmemory 1800mb
