--- a/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
     nfd:
       enabled: false
     driver:
-      enabled: false
+      enabled: true
     toolkit:
       enabled: true
       env:
