--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - ./reloader/ks.yaml
   # - ./amd-device-plugin/ks.yaml
   - ./node-feature-discovery/ks.yaml
-  # - ./intel-device-plugin/ks.yaml
+  - ./intel-device-plugin/ks.yaml
   - ./nvidia-gpu-operator/ks.yaml
   # - ./renovate/ks.yaml
