--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -54,6 +54,8 @@ spec:
                 # nvidia.com/gpu: 1
                 gpu.intel.com/i915: 1
                 memory: 9248M
+            securityContext:
+              privileged: true
     service:
       main:
         controller: main
