--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -35,6 +35,7 @@ spec:
               - 44
               - 110
               - 993
+            privileged: true
         containers:
           main:
             image:
