--- a/kubernetes/apps/media/jellyfin/app/pvc.yaml
+++ b/kubernetes/apps/media/jellyfin/app/pvc.yaml
@@ -7,5 +7,16 @@ spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 250Gi
+      storage: 3Gi
+  storageClassName: longhorn-fast
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jellyfin-transcode
+spec:
+  accessModes: ["ReadWriteOnce"]
+  resources:
+    requests:
+      storage: 100Gi
   storageClassName: longhorn-fast
