--- a/kubernetes/apps/home/scrypted/app/helmrelease.yaml
+++ b/kubernetes/apps/home/scrypted/app/helmrelease.yaml
@@ -18,6 +18,7 @@ spec:
   values:
     defaultPodOptions:
       runtimeClassName: nvidia
+      hostNetwork: true
     controllers:
       scrypted:
         annotations:
