--- a/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
@@ -35,6 +35,7 @@ spec:
       enabled: false
     driver:
       enabled: true
+      version: 550.90.07
     toolkit:
       enabled: true
       env:
