--- a/kubernetes/apps/observability/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/ks.yaml
@@ -16,28 +16,28 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: &app victoriametrics
-  namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/enabled: "true"
-spec:
-  targetNamespace: observability
-  dependsOn:
-    - name: victoriametrics-crd
-    - name: longhorn
-  path: "./kubernetes/apps/observability/victoria-metrics/app/"
-  prune: true
-  wait: false
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  interval: 30m
-  retryInterval: 1m
-  timeout: 3m
-  postBuild:
-    substitute:
-      APP: *app
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: &app victoriametrics
+#   namespace: flux-system
+#   labels:
+#     substitution.flux.home.arpa/enabled: "true"
+# spec:
+#   targetNamespace: observability
+#   dependsOn:
+#     - name: victoriametrics-crd
+#     - name: longhorn
+#   path: "./kubernetes/apps/observability/victoria-metrics/app/"
+#   prune: true
+#   wait: false
+#   sourceRef:
+#     kind: GitRepository
+#     name: home-kubernetes
+#   interval: 30m
+#   retryInterval: 1m
+#   timeout: 3m
+#   postBuild:
+#     substitute:
+#       APP: *app
