--- a/kubernetes/apps/observability/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/ks.yaml
@@ -1,35 +1,13 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: victoriametrics-crd
-  namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/enabled: "true"
-spec:
-  path: "./kubernetes/apps/observability/victoria-metrics/crd/"
-  prune: true
-  wait: false
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  interval: 30m
-  retryInterval: 1m
-  timeout: 3m
 # ---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
 # kind: Kustomization
 # metadata:
-#   name: &app victoriametrics
+#   name: victoriametrics-crd
 #   namespace: flux-system
 #   labels:
 #     substitution.flux.home.arpa/enabled: "true"
 # spec:
-#   targetNamespace: observability
-#   dependsOn:
-#     - name: victoriametrics-crd
-#     - name: longhorn
-#   path: "./kubernetes/apps/observability/victoria-metrics/app/"
+#   path: "./kubernetes/apps/observability/victoria-metrics/crd/"
 #   prune: true
 #   wait: false
 #   sourceRef:
@@ -38,6 +16,28 @@ spec:
 #   interval: 30m
 #   retryInterval: 1m
 #   timeout: 3m
-#   postBuild:
-#     substitute:
-#       APP: *app
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app victoriametrics
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  targetNamespace: observability
+  dependsOn:
+    - name: victoriametrics-crd
+    - name: longhorn
+  path: "./kubernetes/apps/observability/victoria-metrics/app/"
+  prune: true
+  wait: false
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+  postBuild:
+    substitute:
+      APP: *app
