--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
     # VM Operator deployment
     victoria-metrics-operator:
       enabled: true
+      cleanupCRD: true
       operator:
         disable_prometheus_converter: false # Ensure we keep enabled the converter to sync prom rules to VM rules
         enable_converter_ownership: true # Required to allow VM to remove VM rules it imports if a prometheus rule is deleted
@@ -472,4 +473,12 @@ spec:
     # I chose to deploy this seperately and manage it myself
     #   insetad of trusting the stack chart
     grafana:
+      enabled: false
+
+    ## install vm operator crds
+    crds:
+      enabled: true
+
+    ## install prometheus operator crds
+    prometheus-operator-crds:
       enabled: false
