--- a/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
 
     nfd:
       enabled: false
-      nodefeaturerules: false
+      nodefeaturerules: true
 
     psa:
       enabled: false
