--- a/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
@@ -36,6 +36,7 @@ spec:
             - pci
             - system
             - usb
+            - custom
     master:
         config:
           extraLabelNs:
