--- a/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
@@ -297,17 +297,17 @@ spec:
           value: all
         - name: NVIDIA_DRIVER_CAPABILITIES
           value: all
-      resources:
-      # Plugin configuration
-      # Use "name" to either point to an existing ConfigMap or to create a new one with a list of configurations(i.e with create=true).
-      # Use "data" to build an integrated ConfigMap from a set of configurations as
-      # part of this helm chart. An example of setting "data" might be:
-        config:
-          create: true
-          name: time-slicing-config
-          default: any
-          data:
-            any: |-
+      resources: {}
+      config:
+        # Create a ConfigMap (default: false)
+        create: true
+        # ConfigMap name (either exiting or to create a new one with create=true above)
+        name: "time-slicing-config"
+        # Default config name within the ConfigMap
+        default: "any"
+        # Data section for the ConfigMap to create (i.e only applies when create=true)
+        data:
+          any: |-
               version: v1
               flags:
                 migStrategy: none
@@ -318,15 +318,6 @@ spec:
                   resources:
                     - name: nvidia.com/gpu
                       replicas: 4
-      config:
-        # Create a ConfigMap (default: false)
-        create: false
-        # ConfigMap name (either exiting or to create a new one with create=true above)
-        name: ""
-        # Default config name within the ConfigMap
-        default: ""
-        # Data section for the ConfigMap to create (i.e only applies when create=true)
-        data: {}
       # MPS related configuration for the plugin
       mps:
         # MPS root path on the host
