--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
       namespace: storage
   values:
     defaultPodOptions:
-      runtimeClassName: nvidia-cdi
+      runtimeClassName: nvidia
     controllers:
       main:
         annotations:
