--- a/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/nvidia-gpu-operator/app/helmrelease.yaml
@@ -161,9 +161,9 @@ spec:
       strategy: single
 
     driver:
-      enabled: true
+      enabled: false
       nvidiaDriverCRD:
-        enabled: true
+        enabled: false
         deployDefaultCR: true
         driverType: gpu
         nodeSelector: {}
