--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -474,3 +474,7 @@ spec:
     #   insetad of trusting the stack chart
     grafana:
       enabled: false
+
+    ## install prometheus operator crds
+    prometheus-operator-crds:
+      enabled: true
