--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -17,13 +17,13 @@ resources:
   - ./repos/intel.yaml
   - ./repos/amd.yaml
   - ./repos/node-feature-discovery.yaml
-  - ./repos/plex.yaml
+  # - ./repos/plex.yaml
   - ./repos/sftpgo.yaml
   - ./repos/nvidia.yaml
   - ./repos/argocd.yaml
   - ./repos/authentik.yaml
   - ./repos/victoriametrics.yaml
-  - ./repos/robusta.yaml
+  # - ./repos/robusta.yaml
   - ./repos/harbor.yaml
   - ./repos/harbor-webhook.yaml
-  - ./repos/angelnu.yaml
+  - ./repos/democratic-csi.yaml
